--- a/InvoiceManager/ViewModels/MainWindow.xaml
+++ b/InvoiceManager/ViewModels/MainWindow.xaml
@@ -14,6 +14,7 @@
                 </MenuItem>
                 <MenuItem Header="Product">
                     <MenuItem Header="New" Click="CreateProduct"/>
+                    <MenuItem Header="View" Click="ViewProducts"/>
                 </MenuItem>
             </Menu>
         </DockPanel>
