--- a/Code Abgabe/InvoiceManager/ViewModels/InvoiceViewWindow.xaml
+++ b/Code Abgabe/InvoiceManager/ViewModels/InvoiceViewWindow.xaml
@@ -1,19 +1,12 @@
-﻿<Window x:Class="InvoiceManager.ViewModels.ProductViewWindow"
+﻿<Window x:Class="InvoiceManager.ViewModels.InvoiceViewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:InvoiceManager.ViewModels"
         mc:Ignorable="d"
-        Title="ProductViewWindow" Height="450" Width="800">
+        Title="InvoiceViewWindow" Height="450" Width="800">
     <Grid>
-        <ListView Margin="10,10,10,64" Name="ProductViewBinding" MouseDoubleClick="OpenProduct">
-            <ListView.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="Remove"
-                                  Click="RemoveProduct"/>
-                </ContextMenu>
-            </ListView.ContextMenu>
+        <ListView Margin="10,10,10,64" Name="InvoiceViewBinding">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <WrapPanel>
