--- a/Code Abgabe/InvoiceManager/ViewModels/ProductViewWindow.xaml
+++ b/Code Abgabe/InvoiceManager/ViewModels/ProductViewWindow.xaml
@@ -1,14 +1,18 @@
-﻿<Window x:Class="InvoiceManager.ViewModels.InvoiceWindow"
+﻿<Window x:Class="InvoiceManager.ViewModels.ProductViewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:InvoiceManager.ViewModels"
         mc:Ignorable="d"
-        Title="InvoiceWindow" Height="450" Width="800">
+        Title="ProductViewWindow" Height="450" Width="800">
     <Grid>
-        <Label Content="Products (Select Products and click 'Create Invoice')" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top"/>
-        <ListView Margin="10,50,10,64" Name="ProductBinding" PreviewMouseLeftButtonUp="product_Click">
+        <ListView Margin="10,10,10,64" Name="ProductViewBinding" MouseDoubleClick="OpenProduct">
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Remove"
+                                  Click="RemoveProduct"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <WrapPanel>
@@ -28,7 +32,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Content="Create Invoice" Click="Create_Button_Click" Margin="267,375,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="104"/>
-        <Button Content="Close" Click="Close_Button_Click" Margin="429,375,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="104"/>
+        <Button Content="Close" Click="Button_Click" Margin="348,375,348,0" Height="30" VerticalAlignment="Top"/>
     </Grid>
 </Window>
